tests/security/taintPropertyPassingObjectSettingValueLater/output.txt
ERROR: TaintedData - input.hack:14:10 - Data from a URL query string found its way to an HTML tag